--- a/plugins/cloud-gce/pom.xml
+++ b/plugins/cloud-gce/pom.xml
@@ -18,7 +18,7 @@ governing permissions and limitations under the License. -->
     <parent>
         <groupId>org.elasticsearch.plugin</groupId>
         <artifactId>plugins</artifactId>
-        <version>2.4.5-SNAPSHOT</version>
+        <version>2.4.5</version>
     </parent>
 
     <artifactId>cloud-gce</artifactId>
@@ -27,7 +27,8 @@ governing permissions and limitations under the License. -->
 
     <properties>
         <elasticsearch.plugin.classname>org.elasticsearch.plugin.cloud.gce.CloudGcePlugin</elasticsearch.plugin.classname>
-        <google.gce.version>v1-rev71-1.20.0</google.gce.version>
+        <google.gce.version>v1-rev144-1.21.0</google.gce.version>
+        <google.gcs.version>1.0.0</google.gcs.version>       
         <!-- currently has no unit tests -->
         <tests.rest.suite>cloud_gce</tests.rest.suite>
         <tests.rest.load_packaged>false</tests.rest.load_packaged>
@@ -48,6 +49,11 @@ governing permissions and limitations under the License. -->
               </exclusion>
           </exclusions>
         </dependency>
+         <dependency>
+		    <groupId>com.google.cloud</groupId>
+		    <artifactId>google-cloud-storage</artifactId>
+		    <version>${google.gcs.version}</version>
+		</dependency>		
         <!-- We need to force here the compile scope as it was defined as test scope in plugins/pom.xml -->
         <!-- TODO: remove this dependency when we will have a REST Test module -->
         <dependency>
@@ -59,6 +65,101 @@ governing permissions and limitations under the License. -->
 
     <build>
         <plugins>
+        	<plugin>
+                <groupId>de.thetaphi</groupId>
+                <artifactId>forbiddenapis</artifactId>
+                <executions>
+                    <execution>
+                        <id>check-forbidden-apis</id>
+                        <phase>none</phase>
+                    </execution>
+                    <execution>
+                        <id>check-forbidden-test-apis</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>check-license-headers</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>check-invalid-patterns</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <!-- Don't run the license checker in core -->
+                        <id>check-license</id>
+                        <phase>none</phase>
+                    </execution>
+                    <execution>
+                        <id>set-doclint-all</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <!-- if we are on java 1.8.* we set doclint to run all checks -->
+                                <condition property="doclint.all" value="-Xdoclint:all" else="" >
+                                    <matches pattern="1\.8\..+$" string="${java.runtime.version}" />
+                                </condition>
+                            </target>
+                            <exportAntProperties>true</exportAntProperties>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>set-doclint-missing</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <!-- if we are on java 1.8.* we set doclint to ignore missing-->
+                                <condition property="doclint.missing" value="-Xdoclint:-missing" else="" >
+                                    <matches pattern="1\.8\..+$" string="${java.runtime.version}" />
+                                </condition>
+                            </target>
+                            <exportAntProperties>true</exportAntProperties>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-enforcer-plugin</artifactId>
+			  <version>3.0.0-M2</version>
+			  <executions>
+			    <execution>
+			      <id>enforce</id>
+			      <configuration>
+			        <rules>
+			<dependencyConvergence/>
+			        </rules>
+			      </configuration>
+			      <goals>
+			        <goal>enforce</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+			</plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
