--- a/plugins/cloud-gce/pom.xml
+++ b/plugins/cloud-gce/pom.xml
@@ -23,12 +23,15 @@ governing permissions and limitations under the License. -->
 
     <artifactId>cloud-gce</artifactId>
     <name>Plugin: Cloud: Google Compute Engine</name>
-    <description>The Google Compute Engine (GCE) Cloud plugin allows to use GCE API for the unicast discovery mechanism.</description>
+    <description>The Google Compute Engine (GCE) Cloud plugin allows to use GCE API for the unicast discovery
+        mechanism.
+    </description>
 
     <properties>
-        <elasticsearch.plugin.classname>org.elasticsearch.plugin.cloud.gce.CloudGcePlugin</elasticsearch.plugin.classname>
+        <elasticsearch.plugin.classname>org.elasticsearch.plugin.cloud.gce.CloudGcePlugin
+        </elasticsearch.plugin.classname>
         <google.gce.version>v1-rev144-1.21.0</google.gce.version>
-        <google.gcs.version>1.0.0</google.gcs.version>       
+        <google.gcs.version>1.0.0</google.gcs.version>
         <!-- currently has no unit tests -->
         <tests.rest.suite>cloud_gce</tests.rest.suite>
         <tests.rest.load_packaged>false</tests.rest.load_packaged>
@@ -39,21 +42,21 @@ governing permissions and limitations under the License. -->
     <dependencies>
         <!-- Google APIs -->
         <dependency>
-          <groupId>com.google.apis</groupId>
-          <artifactId>google-api-services-compute</artifactId>
-          <version>${google.gce.version}</version>
-          <exclusions>
-              <exclusion>
-                 <groupId>com.google.guava</groupId>
-                 <artifactId>guava-jdk5</artifactId>
-              </exclusion>
-          </exclusions>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-compute</artifactId>
+            <version>${google.gce.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava-jdk5</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-         <dependency>
-		    <groupId>com.google.cloud</groupId>
-		    <artifactId>google-cloud-storage</artifactId>
-		    <version>${google.gcs.version}</version>
-		</dependency>		
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>${google.gcs.version}</version>
+        </dependency>
         <!-- We need to force here the compile scope as it was defined as test scope in plugins/pom.xml -->
         <!-- TODO: remove this dependency when we will have a REST Test module -->
         <dependency>
@@ -65,7 +68,7 @@ governing permissions and limitations under the License. -->
 
     <build>
         <plugins>
-        	<plugin>
+            <plugin>
                 <groupId>de.thetaphi</groupId>
                 <artifactId>forbiddenapis</artifactId>
                 <executions>
@@ -117,8 +120,8 @@ governing permissions and limitations under the License. -->
                         <configuration>
                             <target>
                                 <!-- if we are on java 1.8.* we set doclint to run all checks -->
-                                <condition property="doclint.all" value="-Xdoclint:all" else="" >
-                                    <matches pattern="1\.8\..+$" string="${java.runtime.version}" />
+                                <condition property="doclint.all" value="-Xdoclint:all" else="">
+                                    <matches pattern="1\.8\..+$" string="${java.runtime.version}"/>
                                 </condition>
                             </target>
                             <exportAntProperties>true</exportAntProperties>
@@ -133,8 +136,8 @@ governing permissions and limitations under the License. -->
                         <configuration>
                             <target>
                                 <!-- if we are on java 1.8.* we set doclint to ignore missing-->
-                                <condition property="doclint.missing" value="-Xdoclint:-missing" else="" >
-                                    <matches pattern="1\.8\..+$" string="${java.runtime.version}" />
+                                <condition property="doclint.missing" value="-Xdoclint:-missing" else="">
+                                    <matches pattern="1\.8\..+$" string="${java.runtime.version}"/>
                                 </condition>
                             </target>
                             <exportAntProperties>true</exportAntProperties>
@@ -165,28 +168,29 @@ governing permissions and limitations under the License. -->
                 <artifactId>maven-assembly-plugin</artifactId>
             </plugin>
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-            <!-- generate certificates/keys -->
-                <execution>
-                    <id>certificate-setup</id>
-                    <phase>generate-test-resources</phase>
-                    <goals>
-                        <goal>run</goal>
-                    </goals>
-                    <configuration>
-                        <target>
-                            <delete file="${keystore}" quiet="true"/> <!-- must clean it up first -->
-                            <mkdir dir="${project.build.testOutputDirectory}"/> <!-- the directory must exist first -->
-                            <exec executable="keytool" failonerror="true">
-                                <arg line="-genkey -keyalg RSA -alias selfsigned -keystore ${keystore} -storepass keypass -keypass keypass -validity 712 -keysize 2048 -dname CN=127.0.0.1"/>
-                            </exec>
-                        </target>
-                        <skip>${skip.unit.tests}</skip> <!-- the GceDiscoverTests run as a unittest but are really integ tests that's why we skip this task if unittests don't run -->
-                    </configuration>
-                </execution>
-            </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <!-- generate certificates/keys -->
+                    <execution>
+                        <id>certificate-setup</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <delete file="${keystore}" quiet="true"/> <!-- must clean it up first -->
+                                <mkdir dir="${project.build.testOutputDirectory}"/> <!-- the directory must exist first -->
+                                <exec executable="keytool" failonerror="true">
+                                    <arg line="-genkey -keyalg RSA -alias selfsigned -keystore ${keystore} -storepass keypass -keypass keypass -validity 712 -keysize 2048 -dname CN=127.0.0.1"/>
+                                </exec>
+                            </target>
+                            <skip>${skip.unit.tests}
+                            </skip> <!-- the GceDiscoverTests run as a unittest but are really integ tests that's why we skip this task if unittests don't run -->
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
